packages/theme-default/src/components/date-picker/app-popup.scss
@use '../../util/popup' as popup;

.sx__date-picker-popup {
  @include popup.popup-base;

  background-color: var(--sx-color-background);
  color: var(--sx-internal-color-text);
  overflow: scroll;

  &.is-dark {
    background-color: var(--sx-color-surface-container-high);
  }

  $top-placement-bottom-value: calc(100% + 1rem);

  &.bottom-end {
    left: auto;
    right: 0;
    transform: translateX(0);
  }

  &.top-start {
    inset: auto auto $top-placement-bottom-value 0;
    transform: translateX(0);
  }

  &.top-end {
    inset: auto 0 $top-placement-bottom-value auto;
    transform: translateX(0);
  }
}

